--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"format": "wp-scripts format && stylelint \"**/*.scss\" --fix",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
-		"start": "wp-scripts start",
+		"start": "NODE_OPTIONS=--openssl-legacy-provider wp-scripts start",
 		"packages-update": "wp-scripts packages-update",
 		"prepare": "husky install"
 	},
