--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@wordpress/block-editor": "^8.0.11",
 		"@wordpress/blocks": "^11.1.4",
+		"@wordpress/components": "^28.6.0",
 		"@wordpress/i18n": "^4.2.4"
 	},
 	"devDependencies": {
@@ -37,6 +38,7 @@
 		"@wordpress/stylelint-config": "^19.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.4",
-		"lint-staged": "^12.1.3"
+		"lint-staged": "^12.1.3",
+		"prettier": "^3.3.3"
 	}
 }
